# mcp-learning

./: .gitignore  CLAUDE.md  README.md  virtual-library-implementation-plan.md
.claude/agents/: _mcp-protocol-mentor.md  mcp-protocol-mentor-tts.md  mcp-protocol-mentor.md  meta-agent.md  work-completion-summary.md
.claude/commands/: implement_mcp_feature.md  review_prs.md
.github/workflows/: ci.yml  deploy.yml
docs/mcp/: 01-overview.md  02-architecture.md  03-protocol-specification.md  04-transport-layer.md  05-server-development.md  06-client-development.md  07-sdk-reference.md  08-security.md  09-examples.md  10-additional-resources.md
virtual-library-mcp/: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  STATS_RESOURCES_REFACTOR.md  __init__.py  apps_server.py  auth.py  config.py  icons.py  justfile  pyproject.toml  sampling.py  server.py
virtual-library-mcp/data/samples/: books_medium.csv  books_sample.csv  books_sample.json
virtual-library-mcp/database/: author_repository.py  book_repository.py  circulation_repository.py  patron_repository.py  repository.py  schema.py  seed.py  session.py
virtual-library-mcp/database/seed_data/: fiction.json  genre_fiction.json  nonfiction.json
virtual-library-mcp/docs/: DEMO.md  DEPLOYMENT.md  DEVELOPMENT.md  FEATURE_TESTING_GUIDE.md  LOGFIRE_INSTRUMENTATION_PLAN.md  LOGFIRE_USER_GUIDE.md  OBSERVABILITY_OVERVIEW.md  SAMPLING_TUTORIAL.md  TESTING_SETUP.md  USER_GUIDE.md
virtual-library-mcp/docs/mcp/: 11-protocol-2026-07-28.md
virtual-library-mcp/examples/: config_demo.py  sampling_demo.py
virtual-library-mcp/models/: __init__.py  author.py  book.py  circulation.py  patron.py
virtual-library-mcp/modern/: __init__.py  broker.py  context.py  dispatcher.py  errors.py  http.py  meta.py  mrtr.py  registry.py  skills.py  stdio.py  tasks_ext.py  types.py
virtual-library-mcp/modern/auth/: __init__.py  bearer.py  demo_as.py  metadata.py
virtual-library-mcp/observability/: __init__.py  config.py  context.py  dashboards.py  decorators.py  educational.py  metrics.py  middleware.py
virtual-library-mcp/prompts/: README.md  __init__.py  book_recommendations.py  reading_plan.py  review_generator.py
virtual-library-mcp/resources/: __init__.py  advanced_books.py  books.py  patrons.py  recommendations.py  stats.py
virtual-library-mcp/scripts/: README.md  generate_sample_files.py  init_database.py  test_client.py
virtual-library-mcp/skills/book-recommendations/: SKILL.md
virtual-library-mcp/skills/book-recommendations/references/: GENRE_GUIDE.md
virtual-library-mcp/skills/catalog-research/: SKILL.md
virtual-library-mcp/skills/catalog-research/scripts/: search_tips.md
virtual-library-mcp/skills/circulation-policies/: SKILL.md
virtual-library-mcp/skills/circulation-policies/references/: FINES.md  LOANS.md
virtual-library-mcp/src/: server.py
virtual-library-mcp/src/database/: author_repository.py  repository.py
virtual-library-mcp/src/models/: author.py
virtual-library-mcp/src/prompts/: __init__.py  book_recommendations.py  reading_plan.py  review_generator.py
virtual-library-mcp/src/resources/: __init__.py  patrons.py  uri_utils.py
virtual-library-mcp/src/tools/: README.md  __init__.py  search.py
virtual-library-mcp/src/virtual_library_mcp/: __init__.py  config.py  server.py
virtual-library-mcp/src/virtual_library_mcp/data/: README.txt  library.db.old
virtual-library-mcp/src/virtual_library_mcp/database/: __init__.py  author_repository.py  book_repository.py  circulation_repository.py  patron_repository.py  repository.py  schema.py  session.py
virtual-library-mcp/src/virtual_library_mcp/models/: author.py  book.py  circulation.py  patron.py
virtual-library-mcp/src/virtual_library_mcp/prompts/: __init__.py  book_recommendations.py  reading_plan.py  review_generator.py
virtual-library-mcp/src/virtual_library_mcp/resources/: README.md  __init__.py  advanced_books.py  books.py  patrons.py  recommendations.py  stats.py
virtual-library-mcp/src/virtual_library_mcp/tools/: __init__.py  circulation.py  search.py
virtual-library-mcp/terraform/: apis.tf  cloudrun.tf  firestore.tf  outputs.tf  registry.tf  secrets.tf  service-account.tf  terraform.tfvars.example  variables.tf  versions.tf
virtual-library-mcp/terraform/bootstrap/: main.tf
virtual-library-mcp/tests/: conftest.py  test_auth.py  test_config.py  test_database_schema.py  test_models_author.py  test_models_book.py  test_models_circulation.py  test_models_patron.py  test_placeholder.py  test_repositories.py  test_resources_books.py  test_sampling.py  test_seed_data.py  test_setup_verification.py
virtual-library-mcp/tests/modern/: __init__.py  test_demo_as.py  test_dispatcher.py  test_http.py  test_modern_auth.py  test_mrtr.py  test_skills.py  test_stdio.py  test_subscriptions.py  test_tasks_ext.py  test_types_meta.py
virtual-library-mcp/tests/prompts/: __init__.py  test_book_recommendations.py  test_reading_plan.py  test_review_generator.py
virtual-library-mcp/tests/tools/: conftest.py  test_apps.py  test_book_insights.py  test_bulk_import.py  test_catalog_maintenance.py  test_circulation.py  test_membership.py  test_search.py
virtual-library-mcp/tools/: __init__.py  apps.py  book_insights.py  bulk_import.py  catalog_maintenance.py  circulation.py  membership.py  search.py
