[project]
name = "virtual-library-mcp"
version = "0.1.0"
description = "A comprehensive MCP server demonstrating library management system with all MCP protocol features"
authors = [
    {name = "MCP Learning Project", email = "example@example.com"}
]
# readme = "README.md"  # Will be created in Phase 5
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["mcp", "model-context-protocol", "library", "education", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Education",
]

# Core dependencies for MCP server functionality
dependencies = [
    # MCP framework - provides the server foundation
    "fastmcp>=2.0.0",
    
    # Data validation and serialization - critical for MCP protocol compliance
    "pydantic>=2.0.0",
    
    # Database ORM for persistent data storage
    "sqlalchemy>=2.0.0",
    
    # Test data generation for realistic library catalog
    "faker>=24.0.0",
    
    # Environment variable management for configuration
    "python-dotenv>=1.0.0",
    
    # HTTP client for external API integrations (future use)
    "httpx>=0.26.0",
]

[project.optional-dependencies]
# Development tools - separate from runtime dependencies
dev = [
    # Testing framework
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    
    # Code formatting and linting
    "ruff>=0.3.0",
    
    # Type checking - crucial for MCP protocol implementation
    "pyright>=1.1.350",
    
    # Development server utilities
    "watchdog>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/example/virtual-library-mcp"
Repository = "https://github.com/example/virtual-library-mcp"
Documentation = "https://github.com/example/virtual-library-mcp/docs"
Issues = "https://github.com/example/virtual-library-mcp/issues"

[project.scripts]
# Entry point for running the MCP server
virtual-library-mcp = "virtual_library_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tool configurations for development workflow

[tool.ruff]
# Python version compatibility
target-version = "py312"
# MCP servers often have longer function names due to protocol requirements
# (e.g., handle_tools_list_request, validate_json_rpc_message)
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Enable comprehensive linting rules for MCP development
select = [
    "E",   # pycodestyle errors - catches basic Python errors
    "W",   # pycodestyle warnings - identifies potential issues
    "F",   # Pyflakes - finds undefined names, crucial for protocol handlers
    "UP",  # pyupgrade - keeps code modern, important for async MCP operations
    "B",   # flake8-bugbear - catches common bugs in protocol implementations
    "SIM", # flake8-simplify - simplifies complex protocol handling logic
    "I",   # isort - maintains consistent imports for protocol modules
    "N",   # pep8-naming - ensures protocol methods follow conventions
    "C4",  # flake8-comprehensions - optimizes data transformations
    "TCH", # flake8-type-checking - prevents circular imports in type annotations
    "T20", # flake8-print - prevents debug prints in production MCP servers
    "RUF", # Ruff-specific rules - additional safety checks
    "ASYNC", # flake8-async - critical for async MCP server operations
    "DTZ", # flake8-datetimez - ensures timezone-aware timestamps in logs
    "LOG", # flake8-logging - proper logging for protocol debugging
    "G",   # flake8-logging-format - consistent log formatting
    "PIE", # flake8-pie - miscellaneous lints
    "PT",  # flake8-pytest-style - consistent test patterns for protocol tests
    "RET", # flake8-return - simplifies return statements in handlers
    "SLF", # flake8-self - prevents private member access
    "ARG", # flake8-unused-arguments - catches unused protocol parameters
    "PTH", # flake8-use-pathlib - modern path handling for resources
    "ERA", # eradicate - removes commented code
    "PD",  # pandas-vet - even though we don't use pandas, good practices
    "PGH", # pygrep-hooks - various code quality checks
    "PL",  # Pylint - additional code quality checks
    "TRY", # tryceratops - exception handling best practices
    "NPY", # NumPy-specific rules - good practices even without NumPy
    "PERF", # Perflint - performance anti-patterns
]

# Ignore rules that conflict with MCP development patterns
ignore = [
    "E501",  # line too long (handled by line-length setting)
    "T20",   # Allow print statements for educational/debugging purposes
    "TRY003", # Long exception messages are OK for protocol errors
    "PLR0913", # MCP handlers may need many parameters
    "PLR2004", # Magic values are OK for protocol constants
    "SLF001", # Private member access needed for some FastMCP internals
    "UP017", # timezone.utc is the correct usage, not UTC alias
    "UP046", # Generic[T] syntax is fine for this project
    "PLR0912", # Complex search methods need many branches
    "N818", # RepositoryException is a clear name
    "TRY300", # Return in try block is acceptable
    "RUF012", # Mutable defaults in Pydantic models are handled correctly
    "SIM105", # Try-except-pass is fine for optional JSON parsing
    "PERF401", # List comprehensions not always more readable
    "N806", # Variable names in tests can use uppercase
    "DTZ005", # datetime.now() without timezone - using local timezone for simulated library
]

# MCP-specific configurations
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # assert is OK in tests
    "ARG",   # unused arguments OK in test fixtures
    "PLR2004", # magic values OK in tests
    "SLF001", # private access OK for testing internals
    "DTZ011", # date.today() is OK in tests - using local timezone
    "DTZ005", # datetime.now() without timezone - using local timezone consistently
]
"src/virtual_library_mcp/server.py" = [
    "PLR0913", # Many parameters OK for server initialization
]
"src/virtual_library_mcp/models/*.py" = [
    "DTZ011", # date.today() is appropriate for local date comparisons
    "DTZ005", # datetime.now() without timezone - using local timezone consistently
]

[tool.ruff.format]
# Use double quotes for consistency with MCP protocol JSON strings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# Preserve string quotes style to match JSON protocol examples
docstring-code-format = true
docstring-code-line-length = 80

[tool.pyright]
# Type checking configuration - essential for MCP protocol implementation
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/.venv",
    "**/venv",
    "**/htmlcov",
    "**/build",
    "**/dist",
]
pythonVersion = "3.12"
pythonPlatform = "All"

# Strict type checking for MCP protocol compliance
# MCP servers MUST handle JSON-RPC types correctly
typeCheckingMode = "strict"

# Import resolution for MCP modules
stubPath = "typings"
venvPath = "."
venv = ".venv"

# Critical for MCP: All protocol handlers must be fully typed
reportMissingImports = "error"
reportMissingTypeStubs = "warning"  # Some deps may lack stubs
reportMissingModuleSource = "warning"

# Type safety for protocol implementation
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"

# MCP protocol requires precise type handling
reportGeneralTypeIssues = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "error"
reportMissingTypeArgument = "error"
reportInvalidTypeVarUse = "error"
reportDataclassFieldWithoutDefault = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"

# Async handling critical for MCP servers
reportInvalidStringEscapeSequence = "error"
reportUnusedCoroutine = "error"
reportUnnecessaryAwait = "error"

# Optional but recommended for code quality
reportOptionalSubscript = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"

# Type completeness for protocol messages
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportMissingParameterType = "error"

# Allow some flexibility for educational code
reportCallInDefaultInitializer = "none"  # OK for simple defaults
reportImplicitStringConcatenation = "none"  # OK for long strings
reportMissingSuperCall = "warning"  # Warn but don't error
reportUninitializedInstanceVariable = "error"

[tool.pytest.ini_options]
# Testing configuration for MCP server
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    # Coverage reporting helps ensure MCP protocol compliance
    "--cov=src/virtual_library_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
# Enable async testing for MCP server operations
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
    "watchdog>=6.0.0",
]
